package idgs.sample.tpch.pb;

message CustomerKey {
  required int64 c_custkey = 1;			//primary key
}

message Customer {
  optional string c_name = 1;
  optional string c_address = 2;
  required int64 c_nationkey = 3;
  optional string c_phone = 4;
  optional double c_acctbal = 5;
  optional string c_mktsegment = 6;
  optional string c_comment = 7;
}
